k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eks-microservices
  labels:
    name: eks-microservices
    app: eks-microservices
    environment: production
